<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>
        <import type="com.misterright.ui.mine.ResetPwdActivity"/>
        <import type="com.misterright.MisterConfig"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_toolbar"/>

        <!--<Space-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="12dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/me_menu_item_left_right_padding"
            android:divider="@drawable/linearlayout_divider"
            android:showDividers="middle">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/me_menu_item_height"
                android:paddingRight="@dimen/me_menu_item_left_right_padding"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_2_white"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/old_password"
                    android:textColor="@color/text_black"/>

                <EditText
                    android:id="@+id/resetpwd_old_password"
                    style="@style/text_2_grey_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:maxLength="@{ResetPwdActivity.MAX_PWD_COUNT}"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/old_password_input_hint"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/me_menu_item_height"
                android:paddingRight="@dimen/me_menu_item_left_right_padding"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_2_white"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/new_password"
                    android:textColor="@color/text_black"/>

                <EditText
                    android:id="@+id/resetpwd_new_password"
                    style="@style/text_2_grey_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:maxLength="@{ResetPwdActivity.MAX_PWD_COUNT}"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@{String.format( @string/new_password_input_hint,ResetPwdActivity.MIN_PWD_COUNT)}"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/me_menu_item_height"
                android:paddingRight="@dimen/me_menu_item_left_right_padding"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_2_white"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/repeat_password"
                    android:textColor="@color/text_black"/>

                <EditText
                    android:id="@+id/resetpwd_new_password_repeat"
                    style="@style/text_2_grey_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:maxLength="@{ResetPwdActivity.MAX_PWD_COUNT}"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/repeat_password_input_hint"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</layout>